tried class component

--- a/src/App.scss
+++ b/src/App.scss
@@ -33,8 +33,9 @@
 }
 
 .container{
+  margin: 10px 10%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 3%;
 
   .card{
