--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,11 @@
 }
 
 .container {
+  margin: 10px 10%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
   gap: 3%;
 }
 
