--- a/src/App.css
+++ b/src/App.css
@@ -31,12 +31,7 @@
 }
 
 .container {
-  margin: 10px 10%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[4];
-      grid-template-columns: repeat(4, 1fr);
-  gap: 3%;
+  width: 100%;
 }
 
 .container .card {
