--- a/src/App.scss
+++ b/src/App.scss
@@ -1,64 +1,107 @@
-.main{
-  margin-top: 40px;
-  margin-bottom: 40px;
-  text-align: center;
+$main-color: rgb(243, 195, 35);
+$second-color: rgb(255, 247, 221);
+$third-color: rgb(61, 47, 17);
+$fourth-color: rgb(177, 170, 170);
+body{
+  background-color: $main-color;
 
-  input{
-    border: 3px solid #4F7836;
-    height: 40px;
-    width: 250px;
-    border-radius: 30px;
-    padding: 0 10px;
-    font-size: 18px;
+  .main{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
 
-    &:focus{
-      outline: none;
-    }
+    h1{
+      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      color: $third-color;
 
-  }
-
-    button{
-      margin-left: 10px;
-      width: 80px;
-      height: 40px;
-      background-color: #4F7836;
-      border-style: none;
-      color: white;
-
-      &:hover{
-        cursor: pointer;
+      @media (max-width: 768px) {
+        font-size: 25px;
       }
     }
   
-}
+    input{
+      border: 3px solid $third-color;
+      height: 40px;
+      width: 250px;
+      border-radius: 20px;
+      padding: 0 10px;
+      font-size: 18px;
 
-.container{
-  margin: 10px 10%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 3%;
-
-  .card{
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px #ccc;
-
-    .card-img{
-      border-radius: 5px 5px 0 0;
-      max-width: 100%;
-      height: auto;
+      @media (max-width: 768px) {
+        border: 2px solid $third-color;
+        width: 200px;
+        height: 30px;
+      }
+  
+      &:focus{
+        outline: none;
+      }
+  
     }
+  
+      button{
+        margin-left: 10px;
+        width: 80px;
+        height: 40px;
+        background-color: $second-color;
+        border-style: none;
+        color: $third-color;
+        border-radius: 20px;
+        font-family:Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        box-shadow:  2px 2px 0 0;
+        text-shadow: -1px -1px 1px $main-color;
 
-    .card-content{
-      padding: 20px;
+        @media (max-width: 768px) {
+          font-size: 10px;
+          width: 50px;
+          height: 30px;
+          border-radius: 10px;
+          transition: 0.5s;
+        }
+  
+        &:hover{
+          cursor: pointer;
+          background-color: rgb(228, 122, 52);
+        }
+        &:active{
+          box-shadow: none;
+          transform: translate(0,2px);
+          transition: 1s;
+        }
+      }
+    
+  }
+  
+  .container{
+    margin: 10px 10%;
 
-      .card-title{
-        font-size: 20px;
-        margin-bottom: 20px;
-        text-align: center;
-        color: #333;
+    List{
+      @media (max-width: 768px) {
+        columns: 2;
+      }
+    }
+    
+    .card{
+      border-radius: 5px;
+      box-shadow: 0 2px 5px #ccc;
+  
+      .card-img{
+        border-radius: 5px 5px 0 0;
+        max-width: 100%;
+        height: auto;
+      }
+  
+      .card-content{
+        padding: 20px;
+  
+        .card-title{
+          font-size: 20px;
+          margin-bottom: 20px;
+          text-align: center;
+          color: #333;
+        }
       }
     }
   }
 }
-
