--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@ $fourth-color: rgb(177, 170, 170);
 body{
   background-color: $main-color;
 
+  
+
   .main{
     margin-top: 40px;
     margin-bottom: 40px;
@@ -18,6 +20,10 @@ body{
         font-size: 25px;
       }
     }
+
+    .nav{
+      // text-align: center;
+      // display: flex;
   
     input{
       border: 3px solid $third-color;
@@ -39,7 +45,7 @@ body{
   
     }
   
-      button{
+      .search-button{
         margin-left: 10px;
         width: 80px;
         height: 40px;
@@ -67,9 +73,38 @@ body{
         &:active{
           box-shadow: none;
           transform: translate(0,2px);
-          transition: 1s;
         }
       }
+
+      .fav-button{
+        float: right;
+        margin-right: 10%;
+        width: 80px;
+        height: 50px;
+        border-radius: 20px;
+        border: none;
+        box-shadow: gray 2px 2px 0 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+
+        @media (max-width: 768px) {
+          font-size: 10px;
+          width: 50px;
+          height: 50px;
+          border-radius: 10px;
+          transition: 0.5s;
+        }
+  
+        &:hover{
+          cursor: pointer;
+          background-color: #fff;
+        }
+        &:active{
+          box-shadow: none;
+          transform: translate(0,2px);
+        }
+      }
+    }
     
   }
   
