--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@ $main-color: rgb(243, 195, 35);
 $second-color: rgb(255, 247, 221);
 $third-color: rgb(61, 47, 17);
 $fourth-color: rgb(177, 170, 170);
+
 body{
   background-color: $main-color;
 
@@ -20,10 +21,6 @@ body{
         font-size: 25px;
       }
     }
-
-    .nav{
-      // text-align: center;
-      // display: flex;
   
     input{
       border: 3px solid $third-color;
@@ -69,6 +66,7 @@ body{
         &:hover{
           cursor: pointer;
           background-color: rgb(228, 122, 52);
+          transition: 0.5s;
         }
         &:active{
           box-shadow: none;
@@ -77,27 +75,31 @@ body{
       }
 
       .fav-button{
+        background-color: $second-color;
+        text-shadow: -1px -1px 1px $main-color;
         float: right;
         margin-right: 10%;
-        width: 80px;
+        width: 60px;
         height: 50px;
         border-radius: 20px;
         border: none;
-        box-shadow: gray 2px 2px 0 0;
+        box-shadow: 2px 2px 0 0;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-weight: bold;
+        font-size: 10px;
 
         @media (max-width: 768px) {
-          font-size: 10px;
-          width: 50px;
-          height: 50px;
+          font-size: 7px;
+          width: 40px;
+          height: 40px;
           border-radius: 10px;
           transition: 0.5s;
         }
   
         &:hover{
           cursor: pointer;
-          background-color: #fff;
+          background-color: rgb(228, 122, 52);
+          transition: 0.5s;
         }
         &:active{
           box-shadow: none;
@@ -106,7 +108,7 @@ body{
       }
     }
     
-  }
+  
   
   .container{
     margin: 10px 10%;
@@ -140,3 +142,4 @@ body{
     }
   }
 }
+
