--- a/src/App.scss
+++ b/src/App.scss
@@ -73,7 +73,7 @@ body{
   
     }
   
-      .search-button{
+      button{
         margin-left: 10px;
         width: 80px;
         height: 40px;
